# comparison-tests

./: .gitignore  readme.md
flutter/: .metadata  pubspec.yaml
flutter/.devcontainer/: devcontainer.json  dockerfile
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart  plist.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/web/: index.html
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc
native/android/: build.gradle.kts  run.sh  settings.gradle.kts
native/android/app/: build.gradle.kts
native/android/app/src/main/: AndroidManifest.xml
native/android/gradle/: libs.versions.toml
native/android/gradle/wrapper/: gradle-wrapper.properties
qt-old/: CMakeLists.txt  CMakePresets.json  app.pro  main.cpp
qt-old/.devcontainer/: devcontainer.json  dockerfile
qt-old/android/: AndroidManifest.xml
qt-old/build_android/: CMakeCache.txt
react-native/: App.js  app.json  package-lock.json  package.json
react-native/.devcontainer/: devcontainer.json  dockerfile  init.sh
react-native/android/: settings.gradle
react-native/android/app/: build.gradle
react-native/src/navigation/: AppNavigator.js
react-native/src/screens/: HomeScreen.js  ImageGridScreen.js
(+10 files in other folders)
